--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "botman/studio",
+    "name": "aryala7/studio",
     "description": "BotMan Chatbot framework.",
     "keywords": [
         "botman",
